# feather-tooling

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  hello.cc
bench/: CMakeLists.txt  bench_accumulate.cc
bench/results/: accumulate_vs_manual.json
client/: CMakeLists.txt  client.cc
lib/: CMakeLists.txt
lib/common/: logging.cc  logging.h  status_demo.cc  status_demo.h
models/: export_mlp.py
ort/: CMakeLists.txt  ort_infer.cc
proto/: CMakeLists.txt  event.proto
server/: CMakeLists.txt  server.cc
tests/: CMakeLists.txt  main.cc
